<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="@drawable/login_bg" >

    <EditText
        android:id="@+id/et_account"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/login_icon_password"
        android:drawablePadding="30dip"
        android:hint="@string/login_username_hint"
        android:inputType="text"
        android:paddingLeft="15dip"
        android:textColor="@color/base_color_text_black"
        android:textColorHint="@color/base_color_text_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/base_horization_line" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/login_icon_password"
        android:drawablePadding="30dip"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="15dip"
        android:textColor="@color/base_color_text_black"
        android:textColorHint="@color/base_color_text_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/base_horization_line" />

    <EditText
        android:id="@+id/et_pwconfirm"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/login_icon_password"
        android:drawablePadding="30dip"
        android:hint="@string/register_password_confirm_hint"
        android:inputType="textPassword"
        android:paddingLeft="15dip"
        android:textColor="@color/base_color_text_black"
        android:textColorHint="@color/base_color_text_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/base_horization_line" />
     <EditText
        android:id="@+id/et_email"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/login_icon_password"
        android:drawablePadding="30dip"
        android:hint="@string/register_email_confirm_hint"
        android:paddingLeft="15dip"
        android:textColor="@color/base_color_text_black"
        android:textColorHint="@color/base_color_text_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/base_horization_line" />
    <CheckBox 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_ui_cb_sex"
        android:id="@+id/cb_sex"
        android:textColor="@color/base_color_text_black"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>